--- a/index.html
+++ b/index.html
@@ -4,47 +4,41 @@
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
+
     The path provided below has to start and end with a slash "/" in order for
     it to work correctly.
+
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A resource to help developers evaluate and use Flutter.">
+  <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="gallery">
+  <meta name="apple-mobile-web-app-title" content="cosmica_nail_art">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" sizes="32x32"/>
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>Flutter Gallery</title>
-  <style>
-  body {
-    background-color: #FFFFFF;
-  }
-  </style>
+  <title>Fellows UCU</title>
   <link rel="manifest" href="manifest.json">
-  <script>
-    let searchParams = new URLSearchParams(window.location.search);
-    if (searchParams.has('renderer')) {
-      window.flutterWebRenderer = searchParams.get('renderer');
-      console.log(searchParams.get('renderer') + ' renderer requested in the URL');
-    }
 
+  <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '2094520002';
+    var serviceWorkerVersion = '151375736';
   </script>
+  <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 <body>
-
   <div id="loading">
     <style>
       body {
@@ -78,7 +72,8 @@
   </div>
 
   <script>
-    window.addEventListener('load', function() {
+    window.addEventListener('load', function(ev) {
+      // Download main.dart.js
       var loading = document.querySelector('#loading');
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
@@ -99,6 +94,5 @@
       });
     });
   </script>
-
 </body>
 </html>
